# tulip-plugin-image3d

./: CMakeLists.txt  ExportImage.cpp  GraphFillingFunctions.h  GraphFillingFunctions2.h  ImportImage.cpp  ImportImageAsColor.cpp  ImportImageAsDoubleProperty.cpp  ImportImageAsDoubleVectorProperty.cpp  ImportImageAsIntegerProperty.cpp  ImportImageAsIntegerVectorProperty.cpp  LoadColorPropertyFromImage.cpp  LoadDoublePropertyFromImage.cpp  LoadDoubleVectorPropertyFromImage.cpp  LoadImageData.cpp  LoadIntegerPropertyFromImage.cpp  LoadIntegerVectorPropertyFromImage.cpp  LoadMaskAsSelectionFromImage.cpp  LoadMaskDoublePropertyFromImage.cpp  PluginUtils.h  README.md  export_selection.py
