CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(ITK REQUIRED COMPONENTS ITKCommon ITKIOImageBase ITKIOMeta ITKIOPNG ITKIOJPEG ITKIOBMP)
INCLUDE(${ITK_USE_FILE})

FOREACH(l
		LoadColorPropertyFromImage
		LoadDoublePropertyFromImage
		LoadDoubleVectorPropertyFromImage
		LoadIntegerPropertyFromImage
		LoadIntegerVectorPropertyFromImage
		LoadMaskAsSelectionFromImage
		LoadMaskDoublePropertyFromImage)
	SET(PLUGIN_NAME "${l}-${TULIP_VERSION}")

	ADD_LIBRARY(${PLUGIN_NAME} SHARED ${l}.cpp)
	TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${ITK_LIBRARIES})

	INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
ENDFOREACH()
